# aemeath_withclaude-645

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  REDESIGN.md  package-lock.json  package.json
.claude/: settings.json
docs/: API.md  mcp.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http.rs  main.rs  mcp.rs  state.rs  tray.rs
